test_data/data_validation_tests_data/invalid_currency_codes_test_data/bank_export_large_file_currency_test_old.xlsx
version https://git-lfs.github.com/spec/v1
oid sha256:ddb23ada8a258fcd9463037eaf4d539da8b7cdb99aa5da243664c8f00c8b008a
size 2332063
